syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.cartobucket.auth.rpc";
option java_outer_classname = "ClientProto";

import "google/protobuf/timestamp.proto";
import "metadata.proto";
import "scope.proto";


service Clients {
  rpc CreateClient (ClientCreateRequest) returns (ClientCreateResponse) {};
  rpc CreateClientCode (ClientCreateClientCodeRequest) returns (ClientCreateClientCodeResponse) {};
  rpc ListClients (ClientListRequest) returns (ClientListResponse) {};
  rpc DeleteClient (ClientDeleteRequest) returns (ClientResponse) {};
  rpc UpdateClient (ClientUpdateRequest) returns (ClientResponse) {};
  rpc GetClient (ClientGetRequest) returns (ClientResponse) {};
  rpc GetClientCode (ClientCodeGetRequest) returns (ClientCodeResponse) {};
}

message ClientCreateRequest {
  string name = 1;
  string authorizationServerId = 2;
  repeated string redirectUris = 3;
  repeated string scopeIds = 4;
  Metadata metadata = 5;
}

message ClientCreateClientCodeRequest {
  string clientId = 1;
  string authorizationServerId = 2;
  string redirectUri = 3;
  repeated Scope scopes = 4;
  optional string state = 5;
  optional string codeChallenge = 6;
  optional string codeChallengeMethod = 7;
  string userId = 8;
  optional string nonce = 9;
}

message ClientCreateClientCodeResponse {
  string id = 1;
  string clientId = 2;
  string authorizationServerId = 3;
  string redirectUri = 4;
  repeated Scope scopes = 5;
  optional string state = 6;
  optional string codeChallenge = 7;
  optional string codeChallengeMethod = 8;
  string userId = 9;
  optional string nonce = 10;
  string code = 11;
  google.protobuf.Timestamp createdOn = 12;
}

message ClientCodeGetRequest {
  string code = 1;
}

message ClientCodeResponse {
  string id = 1;
  string clientId = 2;
  string authorizationServerId = 3;
  string redirectUri = 4;
  repeated Scope scopes = 5;
  optional string state = 6;
  optional string codeChallenge = 7;
  optional string codeChallengeMethod = 8;
  optional string userId = 9;
  optional string nonce = 10;
  string code = 11;
  google.protobuf.Timestamp createdOn = 12;
}

message ClientListRequest {
  repeated string authorizationServerIds = 1;
  int64 limit = 2;
  int64 offset = 3;
}

message ClientDeleteRequest {
  string id = 1;
}

message ClientUpdateRequest {
  string id = 1;
  string name = 2;
  repeated string redirectUris = 3;
  repeated Scope scopes = 4;
  Metadata metadata = 5;
}

message ClientGetRequest {
  string id = 1;
}

message ClientCreateResponse {
  string id = 1;
  string name = 2;
  string authorizationServerId = 3;
  repeated string redirectUris = 4;
  repeated Scope scopes = 5;
  Metadata metadata = 6;
  google.protobuf.Timestamp createdOn = 7;
  google.protobuf.Timestamp updatedOn = 8;
}

message ClientResponse {
  string id = 1;
  string name = 2;
  string authorizationServerId = 3;
  repeated string redirectUris = 4;
  repeated Scope scopes = 5;
  Metadata metadata = 6;
  google.protobuf.Timestamp createdOn = 7;
  google.protobuf.Timestamp updatedOn = 8;
}

message ClientListResponse {
  repeated ClientResponse clients = 1;
  int64 limit = 2;
  int64 offset = 3;
}